--- a/requirements.txt
+++ b/requirements.txt
@@ -1,136 +1,8 @@
-altair==4.1.0
-appdirs==1.4.4
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-astor==0.8.1
-attrs==21.2.0
-audioread==2.1.9
-autopep8==1.6.0
-backcall==0.2.0
-base58==2.1.1
-bleach==4.1.0
-blinker==1.4
-blis==0.7.5
-cachetools==4.2.4
-catalogue==1.0.0
-certifi==2021.10.8
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.9
-click==7.1.2
-colorama==0.4.4
-cryptography==36.0.1
-cycler==0.11.0
-cymem==2.0.6
-debugpy==1.5.1
-decorator==5.1.0
-defusedxml==0.7.1
-docx2txt==0.8
-entrypoints==0.3
-fonttools==4.28.5
-gitdb==4.0.9
-GitPython==3.1.24
-idna==3.3
-install==1.3.5
-ipykernel==6.6.0
-ipython==7.30.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-jedi==0.18.1
-Jinja2==3.0.3
-joblib==1.1.0
-jsonschema==4.3.1
-jupyter-client==7.1.0
-jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-kiwisolver==1.3.2
-langcodes==3.3.0
-librosa==0.8.1
-llvmlite==0.37.0
-MarkupSafe==2.0.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-mistune==0.8.4
-murmurhash==1.0.6
-nbclient==0.5.9
-nbconvert==6.3.0
-nbformat==5.1.3
-nest-asyncio==1.5.4
-nltk==3.6.5
-notebook==6.4.6
-numba==0.54.1
-numpy==1.20.3
-packaging==21.3
-pandas==1.3.5
-pandocfilters==1.5.0
-parso==0.8.3
-pathy==0.6.1
-pdfminer.six==20200517
-pdfplumber==0.5.28
-pickleshare==0.7.5
-Pillow==8.4.0
-plac==1.1.3
-pooch==1.5.2
-preshed==3.0.6
-prometheus-client==0.12.0
-prompt-toolkit==3.0.24
-protobuf==3.19.1
-pyarrow==6.0.1
-pycodestyle==2.8.0
-pycparser==2.21
-pycryptodome==3.12.0
-pydantic==1.8.2
-pydeck==0.7.1
-pydub==0.25.1
-Pygments==2.10.0
-Pympler==1.0
-pyparsing==3.0.6
-PyPDF2==1.26.0
-pyresparser==1.0.6
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2021.3
-pytz-deprecation-shim==0.1.0.post0
-pywin32==303
-pywinpty==1.1.6
-pyzmq==22.3.0
-regex==2021.11.10
-requests==2.26.0
-resampy==0.2.2
-scikit-learn==1.0.1
-scipy==1.7.3
-seaborn==0.11.2
-Send2Trash==1.8.0
-six==1.16.0
-smart-open==5.2.1
-smmap==5.0.0
-sortedcontainers==2.4.0
-SoundFile==0.10.3.post1
-spacy==2.3.5
-spacy-legacy==3.0.8
-spacy-loggers==1.0.1
-SpeechRecognition==3.8.1
-srsly==1.0.5
-streamlit==1.3.0
-terminado==0.12.1
-testpath==0.5.0
-thinc==7.4.5
-threadpoolctl==3.0.0
-toml==0.10.2
-toolz==0.11.2
-tornado==6.1
-tqdm==4.62.3
-traitlets==5.1.1
-typer==0.4.0
-typing_extensions==4.0.1
-tzdata==2021.5
-tzlocal==4.1
-urllib3==1.26.7
-validators==0.18.2
-Wand==0.6.7
-wasabi==0.9.0
-watchdog==2.1.6
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.2
+streamlit
+soundfile
+librosa
+pydub
+pyresparser
+pdfplumber
+PyPDF2
+streamlit
