--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ PyPDF2
 streamlit
 SpeechRecognition
 spacy==2.3.5
+nltk
 
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
